--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.2",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   }
